# Minecraft-Rust-Alpha

./: .gitignore  Cargo.toml  README.md
docs/: 00-architecture-overview.md  01-core-infrastructure.md  02-world-system.md  03-rendering-system.md  README.md  minecraft-alpha-rust-implementation-guide.md  mob-behavior-algorithms.md  terrain-generation-algorithms.md
docs/architecture/: dependency-map.md
docs/core-systems/: block-registry.md  math-utilities.md  minecraft-main.md  world-management.md
docs/entities/: entity-system.md
docs/network/: network-system.md
docs/rendering/: render-engine.md
docs/rust-migration/: design-patterns.md
docs/ui-systems/: gui-system.md
src/: lib.rs  main.rs
src/audio/: mod.rs  music.rs  sound_engine.rs
src/blocks/: block.rs  light.rs  materials.rs  mod.rs
src/camera/: mod.rs
src/engine/: game_loop.rs  mod.rs  threading.rs
src/entities/: entity.rs  mob.rs  mod.rs  player.rs  spatial_index.rs
src/input/: mod.rs
src/math/: mod.rs  position.rs  trig.rs  utils.rs
src/nbt/: mod.rs  parser.rs
src/render/: chunk_mesh.rs  chunk_renderer.rs  entity_renderer.rs  frustum.rs  gl_wrapper.rs  hud.rs  mod.rs  renderer.rs  shader.wgsl
src/world/: chunk.rs  coordinates.rs  generator.rs  mod.rs  storage.rs  world.rs  world_manager.rs
